@@ -17,18 +17,15 @@ package io.micronaut.http.server.netty;
 
 import io.micronaut.context.ApplicationContext;
 import io.micronaut.context.BeanProvider;
-import io.micronaut.context.DefaultApplicationContext;
 import io.micronaut.context.env.CachedEnvironment;
 import io.micronaut.context.env.Environment;
 import io.micronaut.context.event.ApplicationEventPublisher;
 import io.micronaut.context.exceptions.ConfigurationException;
 import io.micronaut.core.annotation.Internal;
-import io.micronaut.core.annotation.NonNull;
-import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.annotation.TypeHint;
+import io.micronaut.core.util.SupplierUtil;
 import io.micronaut.core.io.socket.SocketUtils;
 import io.micronaut.core.util.CollectionUtils;
-import io.micronaut.core.util.SupplierUtil;
 import io.micronaut.http.HttpVersion;
 import io.micronaut.http.context.event.HttpRequestReceivedEvent;
 import io.micronaut.http.context.event.HttpRequestTerminatedEvent;
@@ -81,16 +78,15 @@ import io.netty.channel.nio.NioIoHandler;
 import io.netty.channel.socket.DatagramChannel;
 import io.netty.channel.socket.ServerSocketChannel;
 import io.netty.channel.unix.DomainSocketAddress;
-import io.netty.handler.codec.http.multipart.DiskFileUpload;
 import io.netty.handler.codec.quic.QuicSslContext;
 import io.netty.handler.ssl.SslContext;
 import io.netty.util.concurrent.Future;
 import io.netty.util.concurrent.GenericFutureListener;
 import io.netty.util.concurrent.GlobalEventExecutor;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
 import java.net.BindException;
 import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
@@ -112,6 +108,7 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -142,6 +139,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     private static final Logger LOG = LoggerFactory.getLogger(NettyHttpServer.class);
     private final NettyEmbeddedServices nettyEmbeddedServices;
     private final NettyHttpServerConfiguration serverConfiguration;
+    @Nullable
     private final ServerSslConfiguration sslConfiguration;
     private final Environment environment;
     private final RoutingInBoundHandler routingHandler;
@@ -152,7 +150,9 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     private final HttpHostResolver hostResolver;
     private boolean shutdownWorker = false;
     private boolean shutdownParent = false;
+    @Nullable
     private EventLoopGroup workerGroup;
+    @Nullable
     private EventLoopGroup parentGroup;
     private final Collection<ChannelPipelineListener> pipelineListeners = new ArrayList<>(2);
     @Nullable
@@ -173,8 +173,6 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         this.isDefault = isDefault;
         this.serverConfiguration = serverConfiguration;
         this.nettyEmbeddedServices = nettyEmbeddedServices;
-        Optional<File> location = this.serverConfiguration.getMultipart().getLocation();
-        location.ifPresent(dir -> DiskFileUpload.baseDirectory = dir.getAbsolutePath());
         this.applicationContext = nettyEmbeddedServices.getApplicationContext();
         this.environment = applicationContext.getEnvironment();
 
@@ -192,10 +190,14 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             nettyEmbeddedServices.getExecutorSelector()
                 .select(TaskExecutors.BLOCKING).orElse(null)
         );
+        final Supplier<Executor> requestEventExecutor = SupplierUtil.memoized(() ->
+            nettyEmbeddedServices.getExecutorSelector().selectExecutor(null, serverConfiguration)
+        );
         this.routingHandler = new RoutingInBoundHandler(
             serverConfiguration,
             nettyEmbeddedServices,
             ioExecutor,
+            requestEventExecutor,
             httpRequestTerminatedEventPublisher,
             httpRequestReceivedEventPublisher,
             applicationContext.getConversionService()
@@ -216,7 +218,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             String configuredHost = serverConfiguration.getHost().orElse(null);
             List<NettyHttpServerConfiguration.NettyListenerConfiguration> implicit = new ArrayList<>(2);
             final ServerSslBuilder serverSslBuilder = nettyEmbeddedServices.getServerSslBuilder();
-            if (serverSslBuilder != null && this.sslConfiguration.isEnabled()) {
+            if (serverSslBuilder != null && this.sslConfiguration != null && this.sslConfiguration.isEnabled()) {
                 implicit.add(NettyHttpServerConfiguration.NettyListenerConfiguration.createTcp(configuredHost, sslConfiguration.getPort(), true, sslConfiguration.getKeyName(), sslConfiguration.getTrustName()));
             } else {
                 implicit.add(NettyHttpServerConfiguration.NettyListenerConfiguration.createTcp(configuredHost, getHttpPort(serverConfiguration), false, null, null));
@@ -251,7 +253,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return getHttpPort(configPort);
     }
 
-    private int getHttpPort(Integer configPort) {
+    private int getHttpPort(@Nullable Integer configPort) {
         if (configPort != null) {
             return configPort;
         } else {
@@ -282,14 +284,9 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     }
 
     @Override
-    @NonNull
     public synchronized NettyEmbeddedServer start() {
         if (!isRunning()) {
             if (isDefault && !applicationContext.isRunning()) {
-                if (applicationContext instanceof DefaultApplicationContext defaultApplicationContext) {
-                    // Stop did remove the existing environment
-                    defaultApplicationContext.setEnvironment(environment);
-                }
                 applicationContext.start();
             }
             //suppress unused
@@ -329,7 +326,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                 if (CollectionUtils.isNotEmpty(exposedPorts)) {
                     router.applyDefaultPorts(listeners.stream()
                             .filter(l -> l.config.isExposeDefaultRoutes())
-                            .map(l -> l.serverChannel.localAddress())
+                            .map(l -> Objects.requireNonNull(l.serverChannel).localAddress())
                             .filter(InetSocketAddress.class::isInstance)
                             .map(addr -> ((InetSocketAddress) addr).getPort())
                             .toList());
@@ -342,6 +339,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return this;
     }
 
+    @Nullable
     private EventLoopGroupConfiguration resolveWorkerConfiguration() {
         EventLoopGroupConfiguration workerConfig = serverConfiguration.getWorker();
         if (workerConfig == null) {
@@ -358,18 +356,15 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     }
 
     @Override
-    @NonNull
     public synchronized NettyEmbeddedServer stop() {
         return stop(false);
     }
 
     @Override
-    @NonNull
     public NettyEmbeddedServer stopServerOnly() {
         return stop(true);
     }
 
-    @NonNull
     private NettyEmbeddedServer stop(boolean stopServerOnly) {
         if (isRunning() && workerGroup != null) {
             if (running.compareAndSet(true, false)) {
@@ -380,7 +375,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     }
 
     @Override
-    public void register(@NonNull NettyServerCustomizer customizer) {
+    public void register(NettyServerCustomizer customizer) {
         Objects.requireNonNull(customizer, "customizer");
         rootCustomizer.add(customizer);
     }
@@ -414,7 +409,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         } else {
             // started already, just use the localAddress() of each channel
             for (Listener listener : listenersLocal) {
-                SocketAddress localAddress = listener.serverChannel.localAddress();
+                SocketAddress localAddress = Objects.requireNonNull(listener.serverChannel).localAddress();
                 if (localAddress instanceof InetSocketAddress address) {
                     // found one \o/
                     return address.getPort();
@@ -494,7 +489,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             return Collections.emptySet();
         }
         return Collections.unmodifiableSet(listeners.stream()
-                .map(l -> l.serverChannel.localAddress())
+                .map(l -> Objects.requireNonNull(l.serverChannel).localAddress())
                 .filter(InetSocketAddress.class::isInstance)
                 .map(addr -> ((InetSocketAddress) addr).getPort())
                 .collect(Collectors.<Integer, Set<Integer>>toCollection(LinkedHashSet::new)));
@@ -539,7 +534,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         return new ServerBootstrap();
     }
 
-    private Listener bind(Supplier<ServerBootstrap> serverBootstrap, Supplier<Bootstrap> udpBootstrap, Supplier<Bootstrap> acceptedBootstrap, NettyHttpServerConfiguration.NettyListenerConfiguration cfg, EventLoopGroupConfiguration workerConfig) {
+    private Listener bind(Supplier<ServerBootstrap> serverBootstrap, Supplier<Bootstrap> udpBootstrap, Supplier<Bootstrap> acceptedBootstrap, NettyHttpServerConfiguration.NettyListenerConfiguration cfg, @Nullable EventLoopGroupConfiguration workerConfig) {
         logBind(cfg);
 
         try {
@@ -581,7 +576,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                         // setServerChannel has been called by the time bind runs.
                         .handler(new ChannelInitializer<Channel>() {
                             @Override
-                            protected void initChannel(@NonNull Channel ch) {
+                            protected void initChannel(Channel ch) {
                                 listener.setServerChannel(ch);
                             }
                         })
@@ -623,7 +618,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                                     future = listenerBootstrap.bind(UnixDomainSocketAddress.of(cfg.getPath()));
                                 } else {
                                     // netty DomainSocketAddress (epoll/kqueue)
-                                    future = listenerBootstrap.bind(DomainSocketHolder.makeDomainSocketAddress(cfg.getPath()));
+                                    future = listenerBootstrap.bind(DomainSocketHolder.makeDomainSocketAddress(Objects.requireNonNull(cfg.getPath())));
                                 }
                             } else {
                                 future = listenerBootstrap.register();
@@ -748,6 +743,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         List<Future<?>> futures = new ArrayList<>(2);
         try {
             if (shutdownParent) {
+                Objects.requireNonNull(parentGroup);
                 EventLoopGroupConfiguration parent = serverConfiguration.getParent();
                 if (parent != null) {
                     long quietPeriod = parent.getShutdownQuietPeriod().toMillis();
@@ -765,7 +761,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             }
             if (shutdownWorker) {
                 futures.add(
-                    workerGroup.shutdownGracefully()
+                    Objects.requireNonNull(workerGroup).shutdownGracefully()
                         .addListener(this::logShutdownErrorIfNecessary)
                 );
             }
@@ -774,7 +770,6 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             if (isDefault && applicationContext.isRunning() && !stopServerOnly) {
                 applicationContext.stop();
             }
-            serverConfiguration.getMultipart().getLocation().ifPresent(dir -> DiskFileUpload.baseDirectory = null);
             List<Listener> activeListeners = this.activeListeners;
             if (activeListeners != null) {
                 for (Listener listener : activeListeners) {
@@ -803,7 +798,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         }
     }
 
-    private EventLoopGroup newEventLoopGroup(EventLoopGroupConfiguration config) {
+    private EventLoopGroup newEventLoopGroup(@Nullable EventLoopGroupConfiguration config) {
         if (config != null) {
             ExecutorService executorService = config.getExecutorName()
                     .flatMap(name -> applicationContext.findBean(ExecutorService.class, Qualifiers.byName(name))).orElse(null);
@@ -859,7 +854,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     }
 
     @Override
-    public void doOnConnect(@NonNull ChannelPipelineListener listener) {
+    public void doOnConnect(ChannelPipelineListener listener) {
         this.pipelineListeners.add(Objects.requireNonNull(listener, "The listener cannot be null"));
     }
 
@@ -923,10 +918,11 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             // work around https://github.com/netty/netty/pull/13730
 
             boolean reading = false;
+            @Nullable
             ChannelPromise closePromise;
 
             @Override
-            public void channelRead(@NonNull ChannelHandlerContext ctx, @NonNull Object msg) throws Exception {
+            public void channelRead(ChannelHandlerContext ctx, Object msg) throws Exception {
                 reading = true;
                 ctx.fireChannelRead(msg);
                 reading = false;
@@ -963,25 +959,28 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         builder.new ConnectionPipeline(prototype, sslContextHolder).initChannel();
     }
 
+    @Nullable
     static Predicate<String> inclusionPredicate(NettyHttpServerConfiguration.AccessLogger config) {
         List<String> exclusions = config.getExclusions();
         if (CollectionUtils.isEmpty(exclusions)) {
             return null;
         } else {
             // Don't do this inside the predicate to avoid compiling every request
-            List<Pattern> patterns = exclusions.stream().map(Pattern::compile).collect(Collectors.toList());
+            List<Pattern> patterns = exclusions.stream().map(Pattern::compile).toList();
             return uri -> patterns.stream().noneMatch(pattern -> pattern.matcher(uri).matches());
         }
     }
 
     private SslContextHolder createLegacySslContextHolder(boolean quic) {
         SslContext sslContext = nettyEmbeddedServices.getServerSslBuilder() != null && !quic ? nettyEmbeddedServices.getServerSslBuilder().build().orElse(null) : null;
-        QuicSslContext quicSslContext = quic ? nettyEmbeddedServices.getServerSslBuilder().buildQuic().orElse(null) : null;
+        QuicSslContext quicSslContext = quic ? Objects.requireNonNull(nettyEmbeddedServices.getServerSslBuilder()).buildQuic().orElse(null) : null;
         return new SslContextHolder(sslContext, quicSslContext);
     }
 
     private class Listener extends ChannelInitializer<Channel> implements GracefulShutdownCapable {
+        @Nullable
         Channel serverChannel;
+        @Nullable
         NettyServerCustomizer listenerCustomizer;
         NettyHttpServerConfiguration.NettyListenerConfiguration config;
         final SslContextAutoLoader contextWrapper = new SslContextAutoLoader(LOG) {
@@ -992,7 +991,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
 
             @Override
             protected SslConfiguration sslConfiguration() {
-                return sslConfiguration;
+                return Objects.requireNonNull(sslConfiguration);
             }
 
             @Override
@@ -1015,6 +1014,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             }
         };
 
+        @Nullable
         volatile HttpPipelineBuilder httpPipelineBuilder;
 
         final Set<HttpPipelineBuilder.ConnectionPipeline> activeConnections = ConcurrentHashMap.newKeySet();
@@ -1029,7 +1029,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
 
         void refresh() {
             boolean quic = config.getFamily() == NettyHttpServerConfiguration.NettyListenerConfiguration.Family.QUIC;
-            httpPipelineBuilder = createPipelineBuilder(listenerCustomizer, quic);
+            httpPipelineBuilder = createPipelineBuilder(Objects.requireNonNull(listenerCustomizer), quic);
             if (config.isSsl() || quic) {
                 contextWrapper.autoLoad(config.getKeyName(), config.getTrustName());
             }
@@ -1042,8 +1042,8 @@ public class NettyHttpServer implements NettyEmbeddedServer {
         }
 
         @Override
-        protected void initChannel(@NonNull Channel ch) throws Exception {
-            HttpPipelineBuilder.ConnectionPipeline cp = httpPipelineBuilder.new ConnectionPipeline(ch, contextWrapper.takeRetained());
+        protected void initChannel(Channel ch) throws Exception {
+            HttpPipelineBuilder.ConnectionPipeline cp = Objects.requireNonNull(httpPipelineBuilder).new ConnectionPipeline(ch, contextWrapper.takeRetained());
             activeConnections.add(cp);
             ch.closeFuture().addListener((ChannelFutureListener) future -> activeConnections.remove(cp));
             cp.initChannel();
@@ -1060,7 +1060,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
                 // HTTP/3 still needs the channel to send the goaway
                 close = Stream.empty();
             } else {
-                close = Stream.of(toCompletionStage(serverChannel.close()));
+                close = Stream.of(toCompletionStage(Objects.requireNonNull(serverChannel).close()));
             }
             return GracefulShutdownCapable.allOf(Stream.concat(
                 close,
@@ -1091,7 +1091,7 @@ public class NettyHttpServer implements NettyEmbeddedServer {
             if (contextHolder == null) {
                 throw new IllegalStateException("SSL context not available, but required for HTTP/3");
             }
-            HttpPipelineBuilder.ConnectionPipeline cp = httpPipelineBuilder.new ConnectionPipeline(ch, contextHolder);
+            HttpPipelineBuilder.ConnectionPipeline cp = Objects.requireNonNull(httpPipelineBuilder).new ConnectionPipeline(ch, contextHolder);
             activeConnections.add(cp);
             ch.closeFuture().addListener((ChannelFutureListener) future -> activeConnections.remove(cp));
             cp.initHttp3Channel();
@@ -1099,7 +1099,6 @@ public class NettyHttpServer implements NettyEmbeddedServer {
     }
 
     private static final class DomainSocketHolder {
-        @NonNull
         private static SocketAddress makeDomainSocketAddress(String path) {
             try {
                 return new DomainSocketAddress(path);
